# chainscope

./: .env.example  .gitignore  LICENSE  Makefile  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
contracts/: .gas-snapshot  foundry.toml
contracts/broadcast/DeployTWAPOracle.s.sol/11155111/: run-latest.json
contracts/broadcast/DeployTWAPOracle.s.sol/11155111/dry-run/: run-latest.json
contracts/script/: DeployTWAPOracle.s.sol
contracts/src/: TWAPOracle.sol
contracts/test/: TWAPOracle.t.sol
docs/: architecture.md
src/: __init__.py
src/analysis/: __init__.py
src/data/: __init__.py  aave.py  coingecko.py  gas.py  uniswap_v3.py
src/protocols/: __init__.py  aave.py  erc20.py  uniswap_v3.py
src/protocols/abi/: aave_v3_pool_data_provider.json  uniswap_v3_pool.json
src/utils/: __init__.py  cache.py  config.py  logging_config.py  retry.py
src/visualization/: __init__.py
tests/: test_data_aave.py  test_data_coingecko.py  test_data_gas.py  test_data_uniswap_v3.py  test_protocols_aave.py  test_protocols_erc20.py  test_protocols_uniswap_v3.py  test_smoke.py  test_utils.py
