[project]
name = "chainscope"
version = "0.1.0"
description = "DeFi market microstructure research toolkit: Uniswap V3 + Aave on-chain analytics and a TWAP oracle contract"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "scipy>=1.18.0",
    "web3>=7.16.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["contracts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py313"]
extend-exclude = "contracts"

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
